# build_tfidf

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  README.md  build_tfidf_index.md  build_tfidf_index_sdd.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
build_tfidf/: __init__.py  chunking.py  cleaning.py  cli.py  embeddings.py  index.py  ingest.py  lexical.py  manifest.py  metadata.py  rerank.py  scoring.py  vector_store.py
tests/: test_cli_smoke.py  test_retrieval_quality.py  test_update_incremental.py  test_versioning.py
tests/data/: gold_queries.jsonl
