[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-tfidf"
version = "0.1.4"
description = "High-quality semantic search for Markdown corpora."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai==2.16.0",
  "tiktoken==0.12.0",
  "faiss-cpu==1.10.0",
  "rank-bm25==0.2.2",
  "numpy==2.2.2",
  "pydantic==2.12.5",
]

[project.scripts]
tfidf-search = "build_tfidf.cli:main"

[tool.setuptools]
packages = ["build_tfidf"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
