[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-tfidf"
version = "0.1.6"
description = "High-quality semantic search for Markdown corpora."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai==1.61.0",
  "tiktoken==0.12.0",
  "faiss-cpu==1.10.0",
  "rank-bm25==0.2.2",
  "numpy==2.2.2",
  "pydantic==2.12.5",
  "anyio==4.12.1",
  "distro==1.9.0",
  "httpx==0.28.1",
  "jiter==0.13.0",
  "sniffio==1.3.1",
  "tqdm==4.67.3",
  "typing-extensions==4.15.0",
  "httpcore==1.0.9",
  "h11==0.16.0",
  "regex==2026.1.15",
  "requests==2.32.5",
  "certifi==2026.1.4",
  "charset-normalizer==3.4.4",
  "idna==3.11",
  "urllib3==2.6.3",
  "annotated-types==0.7.0",
  "pydantic-core==2.41.5",
  "typing-inspection==0.4.2",
  "packaging==26.0",
  "pytest==9.0.2",
  "exceptiongroup==1.3.1",
  "iniconfig==2.3.0",
  "pluggy==1.6.0",
  "pygments==2.19.2",
  "tomli==2.4.0",
]

[project.scripts]
tfidf-search = "build_tfidf.cli:main"

[tool.setuptools]
packages = ["build_tfidf"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
  "ignore:numpy.core._multiarray_umath is deprecated and has been renamed to numpy._core._multiarray_umath:DeprecationWarning",
]
